    translation attributes which apply to all items.
    They are by default translatable.

- Linguist

- rcc


- moc

* [QTBUG-20785] The moc now has a -b<file> option to #include an additional
  file at the beginning of the generated file.


- uic


- uic3


- qmake

* QMAKE_MOC_OPTIONS variable is now available for passing additional parameters
  to the moc.


- configure


- qtconfig


****************************************************************************
*                          Plugins                                         *
****************************************************************************
- The text codecs that were previously plugins are now built into QtCore.

****************************************************************************
*                   Important Behavior Changes                             *
****************************************************************************

- QPointer

   * The implementation of QPointer has been changed to use QWeakPointer. The
     old guard mechanism has been removed. This causes a slight change
     in behavior when using QPointer:

     * When using QPointer on a QWidget (or a subclass of QWidget), previously
     the QPointer would be cleared by the QWidget destructor. Now, the QPointer
     is cleared by the QObject destructor (since this is when QWeakPointers are
     cleared). Any QPointers tracking a widget will NOT be cleared before the
     QWidget destructor destroys the children for the widget being tracked.

- QUrl

  * QUrl has been changed to operate only on percent-encoded
    forms. Fully-decoded forms, where the percent character stands for itself,
    are no longer possible. For that reason, the getters and setters with
    "encoded" in the name are deprecated, except for QUrl::toEncoded() and
    QUrl::fromEncoded().

    QUrl now operates in a mode where it decodes as much as it can of the