@@ -10,9 +10,9 @@
 
 include(g++-base.conf)
 
-QMAKE_CFLAGS_RELEASE_WITH_DEBUGINFO += $$QMAKE_CFLAGS_DWARF2
-QMAKE_CXXFLAGS_RELEASE_WITH_DEBUGINFO += $$QMAKE_CFLAGS_DWARF2
-QMAKE_LFLAGS_RELEASE_WITH_DEBUGINFO += -g $$QMAKE_CFLAGS_DWARF2
+QMAKE_CFLAGS_RELEASE_WITH_DEBUGINFO += -gdwarf-2
+QMAKE_CXXFLAGS_RELEASE_WITH_DEBUGINFO += -gdwarf-2
+QMAKE_LFLAGS_RELEASE_WITH_DEBUGINFO += -g -gdwarf-2
 
 QMAKE_LFLAGS_STATIC_LIB += -all_load
 
