@@ -13,10 +13,10 @@ include(gcc-base.conf)
 QMAKE_COMPILER_DEFINES += __APPLE__ __GNUC__=4
 
 QMAKE_CFLAGS        += -mmacosx-version-min=10.6
-QMAKE_CFLAGS_DWARF2 += -gdwarf-2
+QMAKE_CFLAGS_DEBUG  += -gdwarf-2
 
 QMAKE_CXXFLAGS        += -mmacosx-version-min=10.6
-QMAKE_CXXFLAGS_DWARF2 += $$QMAKE_CFLAGS_DWARF2
+QMAKE_CXXFLAGS_DEBUG  += -gdwarf-2
 
 QMAKE_OBJECTIVE_CFLAGS          = $$QMAKE_CFLAGS
 QMAKE_OBJECTIVE_CFLAGS_WARN_ON  = $$QMAKE_CFLAGS_WARN_ON
