@@ -1,5 +1,4 @@
 CONFIG -= release
-contains(QT_CONFIG,dwarf2)|dwarf2:load(dwarf2, true)
 QMAKE_CFLAGS += $$QMAKE_CFLAGS_DEBUG
 QMAKE_CXXFLAGS += $$QMAKE_CXXFLAGS_DEBUG
 QMAKE_OBJECTIVE_CFLAGS += $$QMAKE_OBJECTIVE_CFLAGS_DEBUG
