@@ -1,6 +1,0 @@
-macx-xcode|macx-pbuilder {
-} else {
-   QMAKE_CFLAGS_DEBUG += $$QMAKE_CFLAGS_DWARF2
-   QMAKE_OBJECTIVE_CFLAGS_DEBUG += $$QMAKE_OBJECTIVE_DWARF2
-   QMAKE_CXXFLAGS_DEBUG += $$QMAKE_CXXFLAGS_DWARF2
-}
